--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -107,7 +107,7 @@ modal-content input {
     display: block; }
 
 .block {
-  background-image: url("../img/img4.jpg");
+  background-image: url("../img/colors-1838392_1920.jpg");
   background-position: center;
   background-size: auto;
   height: 100vh;
@@ -116,9 +116,65 @@ modal-content input {
   justify-content: center;
   align-content: center;
   align-items: center; }
-
-.comingContent {
-  width: 50%;
-  height: 300px;
-  text-align: center;
-  background-color: rgba(196, 196, 196, 0.8); }
+  .block .comingContent {
+    border-radius: 15px;
+    width: 50%;
+    height: fit-content;
+    padding: 10px 20px 10px 20px;
+    text-align: center;
+    background-color: rgba(196, 196, 196, 0.9); }
+    .block .comingContent h1 {
+      margin-top: 10px;
+      font-weight: 900; }
+    .block .comingContent h2 {
+      margin-top: 10px; }
+    .block .comingContent img {
+      height: 30px;
+      margin: 0px 10px 15px 10px; }
+      .block .comingContent img.logo {
+        height: 50px;
+        margin: 10px 0px; }
+  @media (max-width: 692px) {
+    .block .comingContent h1 {
+      margin-top: 10px;
+      font-weight: 900;
+      font-size: 34px; }
+    .block .comingContent h2 {
+      margin-top: 10px;
+      font-size: 24px; }
+    .block .comingContent img {
+      height: 30px;
+      margin: 0px 10px 15px 10px; }
+      .block .comingContent img.logo {
+        height: 50px;
+        margin: 10px 0px; } }
+  @media (max-width: 560px) {
+    .block .comingContent {
+      width: 90%; }
+      .block .comingContent h1 {
+        margin-top: 10px;
+        font-weight: 900;
+        font-size: 34px; }
+      .block .comingContent h2 {
+        margin-top: 10px;
+        font-size: 24px; }
+      .block .comingContent img {
+        height: 30px;
+        margin: 0px 10px 15px 10px; }
+        .block .comingContent img.logo {
+          height: 40px;
+          margin: 10px 0px; } }
+  @media (max-width: 446px) {
+    .block .comingContent h1 {
+      margin-top: 10px;
+      font-weight: 900;
+      font-size: 34px; }
+    .block .comingContent h2 {
+      margin-top: 10px;
+      font-size: 24px; }
+    .block .comingContent img {
+      height: 30px;
+      margin: 0px 10px 15px 10px; }
+      .block .comingContent img.logo {
+        height: 40px;
+        margin: 10px 0px; } }
